--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
   "dependencies": {
     "axios": "^0.18.0",
     "css-loader": "^2.1.1",
+    "dotenv": "^8.0.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
+    "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1"
   },
   "devDependencies": {
