166258210-task(configuration): setup unit testing
- setup unit testing
- setup integration testing

[Deliver #166258210]

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,9 @@
     "extends": "react",
     "env": {
       "browser": true,
-      "node": true
+      "node": true,
+      "jest": true
+
     },
     "settings": {
       "react": {
