--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Politico Frontend",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --open --hot"
+    "test": "jest",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "test:watch": "jest --watchAll",
+    "test:coverage": "jest --coverage --colors"
   },
   "repository": {
     "type": "git",
@@ -40,11 +42,19 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.4.5",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.1",
+    "enzyme-to-json": "^3.3.5",
     "eslint": "^5.16.0",
     "eslint-config-react": "^1.1.7",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.13.0",
+    "jest": "^24.8.0",
+    "jest-css-modules-transform": "^2.2.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.4.1"
