--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "node server.js",
+    "build": "webpack --config webpack.config.js",
+    "devstart": "webpack-dev-server --mode development --open --hot",
     "test:watch": "jest --watchAll",
-    "test:coverage": "jest --coverage --colors"
+    "test:coverage": "jest --coverage --colors",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
