--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "crypto-js": "^3.1.9-1",
     "css-loader": "^2.1.1",
     "dotenv": "^8.0.0",
+    "express": "^4.17.1",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.8.6",
