--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Politico Frontend",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "start": "node server.js",
     "build": "webpack --config webpack.config.js",
     "devstart": "webpack-dev-server --mode development --open --hot",
@@ -34,6 +34,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
+    "react-toastify": "^5.1.1",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
