--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
     "parser": "babel-eslint",
+    "rules": {
+      "react/prop-types": 0
+    },
     "extends": "react",
     "env": {
       "browser": true,
