--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Politico Frontend",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --coverage --config=jest.config.js --detectOpenHandles --runInBand",
     "start": "node server.js",
     "build": "webpack --config webpack.config.js",
     "devstart": "webpack-dev-server --mode development --open --hot",
@@ -59,6 +59,7 @@
     "jest": "^24.8.0",
     "jest-css-modules-transform": "^2.2.0",
     "node-sass": "^4.12.0",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
